# Multimodal_Agentic_App

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py  store_index.py
research/: trials.ipynb
src/: helper.py  prompt.py
static/: style.css
templates/: index.html
